--- a/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
+++ b/AOT/Kernel.Tests/CS/SharpOS.Kernel.Tests.CS.csproj
@@ -27,6 +27,31 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug Test|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>..\..\..\build\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleAssemblies>D:\Program Files\Microsoft Visual Studio 8\Team Tools\Static Analysis Tools\FxCop\\rules</CodeAnalysisRuleAssemblies>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release Test|AnyCPU' ">
+    <OutputPath>..\..\..\build\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleAssemblies>D:\Program Files\Microsoft Visual Studio 8\Team Tools\Static Analysis Tools\FxCop\\rules</CodeAnalysisRuleAssemblies>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
@@ -38,29 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arguments.cs" />
-    <Compile Include="Arithmetic.cs" />
-    <Compile Include="Array.cs" />
-    <Compile Include="BitwiseOperators.cs" />
-    <Compile Include="Boolean.cs" />
-    <Compile Include="BooleanOrderOfOperations.cs" />
-    <Compile Include="ByteString.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="String.cs" />
-    <Compile Include="WhileLoop.cs" />
-    <Compile Include="X86.cs" />
-    <Compile Include="Enum.cs" />
-    <Compile Include="Misc.cs" />
-    <Compile Include="MixedIntegerCast.cs" />
-    <Compile Include="MixedIntegerPointerCast.cs" />
-    <Compile Include="OrderOfOperations.cs" />
-    <Compile Include="PointerCast.cs" />
-    <Compile Include="SignedIntegerCast.cs" />
-    <Compile Include="StaticConstructor.cs" />
-    <Compile Include="Struct.cs" />
-    <Compile Include="Switch.cs" />
-    <Compile Include="UnsignedIntegerCast.cs" />
+    <Compile Include="*.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
