cleaned up boot verbosity a bit

--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -70,10 +70,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ADC\*.cs" />
-    <Compile Include="ADC\X86\*.cs" />
-    <Compile Include="Foundation\*.cs" />
-    <Compile Include="*.cs" />
+    <Compile Include="**\*.cs" Exclude="*.svn" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\..\build\Temp\BuiltinKeymaps.ska">
