Added new 'Diagnostics' stage, which the kernel is set to when entering the demo shell. Added a US-Dvorak-ANSI keymap.

--- a/Kernel/Core/Config/BuiltinKeyMaps.cfg
+++ b/Kernel/Core/Config/BuiltinKeyMaps.cfg
@@ -1,2 +1,4 @@
-UK:../../build/KeyMaps/UK.bin
 US:../../build/KeyMaps/US.bin
+US-Dvorak-ANSI:../../build/KeyMaps/US-Dvorak-ANSI.bin
+UK:../../build/KeyMaps/UK.bin
+
