Added very primitive support for german keyboards. Removed korlib and changed the build files.

--- a/Kernel/Core/Config/BuiltinKeyMaps.cfg
+++ b/Kernel/Core/Config/BuiltinKeyMaps.cfg
@@ -2,4 +2,5 @@ US:../../build/KeyMaps/US.bin
 US-Dvorak-ANSI:../../build/KeyMaps/US-Dvorak-ANSI.bin
 US-Dvorak-Classic:../../build/KeyMaps/US-Dvorak-Classic.bin
 UK:../../build/KeyMaps/UK.bin
+DE:../../build/KeyMaps/DE.bin
 
