--- a/Kernel/Tests/NUnit/SharpOS.Kernel.Tests.NUnit.csproj
+++ b/Kernel/Tests/NUnit/SharpOS.Kernel.Tests.NUnit.csproj
@@ -68,7 +68,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\SharpOS.AOT.Core.csproj">
+    <ProjectReference Include="..\..\..\AOT\Core\SharpOS.AOT.Core.csproj">
       <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
       <Name>SharpOS.AOT.Core</Name>
     </ProjectReference>
