--- a/Tools/DiskImageUpdater/DiskImageUpdater.csproj
+++ b/Tools/DiskImageUpdater/DiskImageUpdater.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DiskImageUpdater</RootNamespace>
-    <AssemblyName>DiskImageUpdater</AssemblyName>
+    <AssemblyName>disk-image-updater</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
