--- a/Kernel/Core/SharpOS.Kernel.Core.csproj
+++ b/Kernel/Core/SharpOS.Kernel.Core.csproj
@@ -68,11 +68,11 @@
       <Project>{7C0A6DF4-B2B8-4CD9-A073-EE834B4246F8}</Project>
       <Name>SharpOS.AOT.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\AOT\Kernel.Tests\CS\SharpOS.Kernel.Tests.CS.csproj">
+    <ProjectReference Include="..\Tests\CS\SharpOS.Kernel.Tests.CS.csproj">
       <Project>{14D3B428-413F-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.CS</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\AOT\Kernel.Tests\IL\SharpOS.Kernel.Tests.IL.csproj">
+    <ProjectReference Include="..\Tests\IL\SharpOS.Kernel.Tests.IL.csproj">
       <Project>{5E470596-4138-11DC-8314-0800200C9A66}</Project>
       <Name>SharpOS.Kernel.Tests.IL</Name>
     </ProjectReference>
@@ -103,6 +103,6 @@ $(TargetDir)\key-compiler.exe -D:.\..\Data\KeyMaps\ $(SolutionDir)\Data\KeyMaps\
 $(TargetDir)\key-compiler.exe -D:.\..\Data\KeyMaps\ -ar -o:"$(TargetDir)\Temp\BuiltinKeymaps.ska" "@$(ProjectDir)\Config\BuiltinKeymaps.cfg"</PreBuildEvent>
     <PostBuildEvent>$(TargetDir)\SharpOS-AOT.exe -d:tests.dump -text-dump -v -o $(TargetDir)\SharpOS.Kernel.bin $(TargetDir)\SharpOS.Kernel.dll $(TargetDir)\SharpOS.Kernel.Tests.CS.dll $(TargetDir)\SharpOS.Kernel.Tests.IL.dll
 copy $(TargetDir)\..\Data\DiskImages\TemplateDisk.img $(TargetDir)\distro\common\SharpOS.img
-$(TargetDir)\DiskImageUpdater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\SharpOS.img</PostBuildEvent>
+$(TargetDir)\disk-image-updater.exe -i $(TargetDir)\SharpOS.Kernel.bin -o $(TargetDir)\distro\common\SharpOS.img</PostBuildEvent>
   </PropertyGroup>
 </Project>
