Fixed the building process so that it works with vs2008 thanks to TeBeCo[fr] ;)

--- a/Kernel/Tests/IL/SharpOS.Kernel.Tests.IL.csproj
+++ b/Kernel/Tests/IL/SharpOS.Kernel.Tests.IL.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="Build">
-    <Exec Command="$(TargetDir)\KernelTestsWrapperGen.exe -c $(MSBuildBinPath)\ilasm.exe" />
+    <Exec Command="$(TargetDir)\KernelTestsWrapperGen.exe -c %windir%\microsoft.net\framework\v2.0.50727\ilasm.exe" />
   </Target>
   <Target Name="Clean">
     <Delete Files="..\..\..\build\SharpOS.Kernel.Tests.IL.dll;..\..\..\build\SharpOS.Kernel.Tests.IL.pdb" />
